added fixed in styles and img tag

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,11 +36,13 @@ aside{
     padding: 1rem;
     background-color: #eee;
     text-align: center;
-    
+    color: #333;
   
 }
 aside img {
     width: 200px;
+    height: auto;
+
 
 }
 
