--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap');
+
+
 :root {
     --primary-color: #ffc300;
     --secondary-color: #ffd60a;
