--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,6 +15,12 @@
   box-sizing: border-box;
 }
 
+header {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+}
+
 body {
   font-family: var(--text-font);
   max-width: 1200px;
@@ -35,7 +41,7 @@ h1, h2, h3 {
 
 .header-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: var(--primary-color);
   padding: 1rem;
@@ -104,3 +110,4 @@ nav a {
   border-radius: 10px;
   float: right;
 }
+
