added styles in footer

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -111,3 +111,13 @@ nav a {
   float: right;
 }
 
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .social-links {
+  display: flex;
+  gap: 1rem;
+}
